--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ng2-validation": "4.2.0",
     "ngx-color-picker": "7.5.0",
     "ngx-echarts": "4.1.1",
+    "ngx-mat-select-search": "^2.1.2",
     "ngx-pagination": "3.2.1",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-quill": "4.8.0",
